# sublime-simpleai

./: AGENTS.md  Default (Linux).sublime-keymap  Default (OSX).sublime-keymap  Main.sublime-menu  README.md  pyproject.toml  simple-ai.sublime-commands  simple-ai.sublime-settings  simple_ai.py
plugin/: api_client.py  commands.py  listeners.py  settings.py
snippets/: completion_prompt.sublime-snippet  instruct_prompt.sublime-snippet
